--- a/labs/lab2/style/screen.css
+++ b/labs/lab2/style/screen.css
@@ -393,9 +393,9 @@ template {
  form{
   text-align: center;
   font: 1em Georgia, "Times New Roman", Times, serif;
-  width: 130px;
-  padding-left: 100px;
-  padding-right: 100px;
+  width: 180px;
+  padding-left: 60px;
+  padding-right: 60px;
   line-height: 1.8;
 }
 
@@ -420,5 +420,35 @@ fieldset{
   width: 100px;
   margin: auto;
   line-height: 1.8;
+}
+
+legend{
+  text-align: center;
+  font: 1em Georgia, "Times New Roman", Times, serif;
+  font-size: 40px;
+  color: #4E50F2;
+  opacity: 1;
+  margin: auto;
+  line-height: 1.8;
+}
+
+label{
+  text-align: center;
+  font: 1em Georgia, "Times New Roman", Times, serif;
+  font-size: 20px;
+  font-weight: bold;
+  color: #4E50F2;
+  opacity: 1;
+  margin: auto;
+  line-height: 1.8;
+}
+
+input{
+  text-align: center;
+  font-weight: bold;
+  opacity: 1;
+  margin: auto;
+  line-height: 1.8;
+  margin-bottom: 20px;
 }
 
