--- a/labs/lab2/css/screen.css
+++ b/labs/lab2/css/screen.css
@@ -263,12 +263,28 @@ textarea {
 /* ----- Jose Garcia Edit ----- */
 
 body{
-  font-family: 'magallanes', sans-serif;
-  text-align: center;
-  background-position: center;
+  font-family: magallanes, sans-serif;
+  text-align: center; 
   background-image: linear-gradient(45deg, rgb(65, 28, 27), rgb(255, 180, 147));  
-  background-repeat: no-repeat; 
-  background-size: contain; 
   margin-top: 24px;  
+  margin-bottom: auto; 
 } 
+
+p{
+  padding-top: 6px;
+  padding-bottom: 10px;
+}
+
+label{
+  font-size: 20px;
+}
+
+input{
+  width: auto;
+  padding: 8px 10px;
+  margin: 8px 0;
+  border: 2px solid #ccc;
+  border-radius: 6px;
+  box-sizing: border-box;
+}
 
