--- a/labs/lab2/screen.css
+++ b/labs/lab2/screen.css
@@ -258,41 +258,24 @@ textarea {
   font: inherit; /* 2 */
 }
 
-
-
-/* ----- Jose Garcia Edit ----- */
-
-body{
-  font-family: magallanes, sans-serif;
-  text-align: center;
-  background-image: linear-gradient(45deg, rgb(65, 28, 27), rgb(255, 180, 147));
-  margin-top: 24px;  
-  margin-bottom: auto;
-}
-
-p{
-  padding-top: 6px;
-  padding-bottom: 10px;
-}
-
-label{
-  font-size: 20px;
-}
-
-input{
-  width: auto;
-  padding: 8px 10px;
-  margin: 8px 0;
-  border: 2px solid #ccc;
-  border-radius: 6px;
-  box-sizing: border-box;
-}
-
-
-
-
 /* 
 Jonathan Garcia
 */
+
+body{
+  text-align: center;
+  font-family: helvetica, sans-serif;
+  background-color: rgb(140, 24, 73); 
+  margin-top: 50px;
+}
+
+
+
+
+
+
+
+
+
 
 
