--- a/labs/lab2/screen.css
+++ b/labs/lab2/screen.css
@@ -269,7 +269,17 @@ body{
   margin-top: 50px;
 }
 
+label{
+  font-size: 16px;
+  font: strong; 
+}
 
+form{
+  margin: auto; 
+  border: 2px solid black; 
+  background-color: rgb(255, 165, 145);
+  width: 75%;
+}
 
 
 
