I have set the perameters for the input boxes.

--- a/labs/lab2/screen.css
+++ b/labs/lab2/screen.css
@@ -281,11 +281,11 @@ form{
   width: 75%;
 }
 
-
-
-
-
-
-
+input{
+  border: 2px solid black; 
+  box-sizing: border-box;
+  margin: 10px;
+  width: auto; 
+}
 
 
