I have added a header to my form and set the perameters for the header.

--- a/labs/lab2/screen.css
+++ b/labs/lab2/screen.css
@@ -262,9 +262,17 @@ textarea {
 Jonathan Garcia
 */
 
+h1{
+  text-align: center;
+  font: helvetica, "Times New Roman", sans-serif;
+  color: rgb(255, 165, 145);
+  margin: auto; 
+  line-height: 2:];
+}
+
 body{
   text-align: center;
-  font-family: helvetica, sans-serif;
+  font: helvetica, "Times New Roman", sans-serif;
   background-color: rgb(140, 24, 73); 
   margin-top: 50px;
 }
