--- a/labs/lab2/screen.css
+++ b/labs/lab2/screen.css
@@ -264,22 +264,21 @@ Jonathan Garcia
 
 h1{
   text-align: center;
-  font: helvetica, "Times New Roman", sans-serif;
+  font-family: Arial, "Times New Roman", sans-serif;
   color: rgb(255, 165, 145);
   margin: auto; 
-  line-height: 2:];
+  line-height: 2;
 }
 
 body{
   text-align: center;
-  font: helvetica, "Times New Roman", sans-serif;
+  font-family: Arial, "Times New Roman", sans-serif;
   background-color: rgb(140, 24, 73); 
   margin-top: 50px;
 }
 
 label{
   font-size: 16px;
-  font: strong; 
 }
 
 form{
